--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="right">
                 <input type="text" name="name" placeholder="Some Name">
                 <input type="text" name="email" placeholder="Some Email">
-                <input type="text" name="comment" placeholder="Some comment">
+                <input type="text" name="comment" placeholder="Some Comment">
             </div>
         </div>
         <div class="card-footer">
